--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 jwt.secret=lH0aUalhci9tYIMwertygfre2345678
 spring.datasource.url=jdbc:postgresql://localhost:5432/shop
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+security.basic.enabled=true
+spring.main.allow-circular-references=true
+jwt.token.expirationInMS=300000
 
-
-
+spring.jpa.show-sql=true
 
